scenario redirect according to button toggle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body onload="init()">
 	<h1>Sporting Skills</h1>
 	<h2>Duckworth Lewis Calculator</h2><br/>
-	<form action="mainPage.php" method="GET">
 	<div name = "mainInfo">
 		<span>Number of overs per side (50 overs of less) &emsp;<input type="text" id="numOfOversPerSide"></span><br/><br/>
 		<!-- Toggle Switch 1-->
@@ -29,8 +28,7 @@
   		<span id="t1wktsafterdlcalc">Wickets &emsp;<input type="text" id="t1dlcalcwickets"></span><br/><br/>
   		<span id="t2oversavailatstart">How many overs available to Team 2 at the start of their inning  &emsp;<input type="text" id="t2Oversavailable"></span><br/><br/>
 	</div>
-		<input type="submit" name="nextpagesubmitbutton" value="Next Page">
-	</form>
+		<input type="submit" name="nextpagesubmitbutton" value="Next Page" onclick="pageselect()">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/mainPage.js"></script> 
 </body>
