--- a/scenario1.html
+++ b/scenario1.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" type="text/css" href="index_page.css">
 </head>
 <body>
+<!-- Scenario 2 contains Team 1 interruptions -->
 	<h1>Sporting Skills</h1>
 	<h2>Duckworth Lewis Calculator</h2><br/>
 	<span>How many interruptions in the Team 2's innings? &emsp;<input type="text" id="t2Interruptions"></span>
 
-
+</body>
+</html>
