--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>DL Calculator</title>
 <link rel="stylesheet" type="text/css" href="index_page.css">
 </head>
 <body onload="init()">
