--- a/scenario1.html
+++ b/scenario1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>DL Calculator</title>
 <script src="mainPage.js"></script> 
 <link rel="stylesheet" type="text/css" href="index_page.css">
 </head>
