scenario1 dynamically creating interruptions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>DL Calculator</title>
-<link rel="stylesheet" type="text/css" href="index_page.css">
+<link rel="stylesheet" type="text/css" href="css/index_page.css">
 </head>
 <body onload="init()">
 	<h1>Sporting Skills</h1>
