--- a/scenario2.html
+++ b/scenario2.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>DL Calculator</title>
-<script src="mainPage.js"></script> 
-<link rel="stylesheet" type="text/css" href="index_page.css">
+<script src="js/mainPage.js"></script> 
+<link rel="stylesheet" type="text/css" href="css/index_page.css">
 </head>
 <body>
 <!-- Scenario 2 contains Team 1 interruptions -->
