--- a/scenario1.html
+++ b/scenario1.html
@@ -2,14 +2,21 @@
 <html>
 <head>
 <title>DL Calculator</title>
-<script src="mainPage.js"></script> 
-<link rel="stylesheet" type="text/css" href="index_page.css">
+ 
+<link rel="stylesheet" type="text/css" href="css/index_page.css">
 </head>
-<body>
+<body onload="init()">
 <!-- Scenario 2 contains Team 1 interruptions -->
 	<h1>Sporting Skills</h1>
 	<h2>Duckworth Lewis Calculator</h2><br/>
-	<span>How many interruptions in the Team 2's innings? &emsp;<input type="text" id="t2Interruptions"></span>
 
+	<span>How many interruptions in the Team 2's innings? &emsp;<input type="text" id="t2Interruptions"> &emsp; <input type="submit" value="Submit" onclick="interruptionsetup()"></span>
+
+	<div id=scenario1ints>
+		
+
+	</div>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script src="js/scenario1.js"></script>
 </body>
 </html>
