--- a/scenario1.html
+++ b/scenario1.html
@@ -12,10 +12,8 @@
 
 	<span>How many interruptions in the Team 2's innings? &emsp;<input type="text" id="t2Interruptions"> &emsp; <input type="submit" value="Submit" onclick="interruptionsetup()"></span>
 
-	<div id=scenario1ints>
-		
-
-	</div>
+	<div id=scenario1ints></div>
+	<input type="submit" name="calculateScore" value="Calculate" onclick="calculatescore()">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/scenario1.js"></script>
 </body>
