added dl data as a map

--- a/scenario1.html
+++ b/scenario1.html
@@ -13,7 +13,7 @@
 	<span>How many interruptions in the Team 2's innings? &emsp;<input type="text" id="t2Interruptions"> &emsp; <input type="submit" value="Submit" onclick="interruptionsetup()"></span>
 
 	<div id=scenario1ints></div>
-	<input type="submit" name="calculateScore" value="Calculate" onclick="calculatescore()">
+	<button name="calculateScore" onclick="calculatescore()">Calculate</button>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/scenario1.js"></script>
 </body>
